--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,10 @@
 <hr>
 <hr><br>
 <app-operador-elvis></app-operador-elvis>
+<hr>
+<hr><br>
+<app-ng-content>
+  <h4 class="titulo">Olá</h4>
+  <p class="corpo">Testando ng-content</p>
+  <p class="corpo">Testando ng-content 2</p>
+</app-ng-content>
