diretivas customizadas - elementRef e Renderer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,6 @@
   <p class="corpo">Testando ng-content</p>
   <p class="corpo">Testando ng-content 2</p>
 </app-ng-content>
+<hr>
+<hr><br>
+<app-diretivas-customizadas></app-diretivas-customizadas>
