--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,1 +1,3 @@
 <h3 FundoAmarelo>Diretivas Customizadas - ElementRef e Renderer</h3>
+<br>
+<h3 HighlightMouse>Text com Highlight ao passar o mouse</h3>
