input property with custom directives

--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,3 +1,5 @@
 <h3 FundoAmarelo>Diretivas Customizadas - ElementRef e Renderer</h3>
 <br>
-<h3 HighlightMouse>Text com Highlight ao passar o mouse</h3>
+<h3 HighlightMouse>Text com Highlight ao passar o mouse (HostListener e HostBinding)</h3>
+<br>
+<h3 [FullHighlight]="'red'" [defaultColor]="'grey'">Text com Highlight com cores diferentes</h3>
